--- a/Client/src/component/components.css
+++ b/Client/src/component/components.css
@@ -1,30 +1,38 @@
-/* Webfont: Merchant-Black */@font-face {
-  font-family: 'MerchantBlack';
-  src: url('../assets/Web-PS/ShockaSerif-Bold.otf') format('woff2'), /* Modern Browsers */
-       url('../assets/Web-PS/Merchant-Black.otf') format('opentype'); /* Safari, Android, iOS */
-           font-style:normal;
+/* Webfont: Merchant-Black */
+@font-face {
+  font-family: "MerchantBlack";
+  src: url("../assets/Web-PS/ShockaSerif-Bold.otf") format("woff2"),
+    /* Modern Browsers */ url("../assets/Web-PS/Merchant-Black.otf")
+      format("opentype"); /* Safari, Android, iOS */
+  font-style: normal;
   font-weight: bolder;
   text-rendering: optimizeLegibility;
 }
-/* Webfont: Merchant-Black */@font-face {
-  font-family: 'Open_Sans';
-  src: url('../assets/Open_Sans/OpenSans-VariableFont_wdth,wght.ttf') format('ttf'), /* Modern Browsers */
-       url('../assets/Open_Sans/OpenSans-Italic-VariableFont_wdth\,wght.ttf') format('ttf'); /* Safari, Android, iOS */
-           font-style:normal;
-  
-  text-rendering: optimizeLegibility;
-  }
-  @font-face {
-    font-family: 'EB_Garamond';
-    src: url('../assets/EB_Garamond/EBGaramond-VariableFont_wght.ttf') format('ttf'), /* Modern Browsers */
-         url('../assets/EB_Garamond/EBGaramond-Italic-VariableFont_wght.ttf') format('ttf'); /* Safari, Android, iOS */
-             font-style:normal;
-    
-    text-rendering: optimizeLegibility;
-    }
+/* Webfont: Merchant-Black */
+@font-face {
+  font-family: "Open_Sans";
+  src: url("../assets/Open_Sans/OpenSans-VariableFont_wdth,wght.ttf")
+      format("ttf"),
+    /* Modern Browsers */
+      url("../assets/Open_Sans/OpenSans-Italic-VariableFont_wdth\,wght.ttf")
+      format("ttf"); /* Safari, Android, iOS */
+  font-style: normal;
 
-   
-body{
+  text-rendering: optimizeLegibility;
+}
+@font-face {
+  font-family: "EB_Garamond";
+  src: url("../assets/EB_Garamond/EBGaramond-VariableFont_wght.ttf")
+      format("ttf"),
+    /* Modern Browsers */
+      url("../assets/EB_Garamond/EBGaramond-Italic-VariableFont_wght.ttf")
+      format("ttf"); /* Safari, Android, iOS */
+  font-style: normal;
+
+  text-rendering: optimizeLegibility;
+}
+
+body {
   font-family: MerchantBlack;
 }
 
@@ -33,54 +41,52 @@ body{
   margin-left: 15px;
   margin-top: 8px;
 }
-.Deskhead{
-display: grid;
-grid-template-columns: 24rem auto;
-grid-gap: 10px;
-
+.Deskhead {
+  display: grid;
+  grid-template-columns: 24rem auto;
+  grid-gap: 10px;
+  margin-top: 7px;
+  margin-bottom: 7px;
 }
-.LogoDiv{
+.LogoDiv {
   grid-area: 1/1/2/2;
   display: grid;
   grid-template-columns: 6rem 14rem;
   grid-template-rows: 2rem 2rem;
-  
-
   width: 20rem;
   height: 4rem;
 }
 
-.logo-img{
+.logo-img {
   grid-area: 1 / 1 / 3/2;
-  
+
   width: 8rem;
-  height:auto;
+  height: auto;
   align-content: center;
-  padding-left:57px;
-  
+  padding-left: 57px;
 }
-.LogoDiv img{
+.LogoDiv img {
   max-width: 100%;
   max-height: 100%;
 }
-.BrandName-small img{
+.BrandName-small img {
   width: 50%;
   height: 60%;
 }
 
-.BrandName{
-   grid-area: 1/2/2/3;
-
-font-family: EB_Garamond;
-font-weight: 600;
-
+.BrandName {
+  grid-area: 1/2/2/3;
+  font-family: EB_Garamond;
+  font-weight: 600;
+  margin-left: 5px;
 }
 
-.BrandName-small{
+.BrandName-small {
   grid-area: 2 /2/3/3;
   font-family: Open_Sans;
   padding-left: 2px;
-
+  margin-left: 5px;
+  text-align: center;
 }
 
 .link {
@@ -97,7 +103,6 @@ font-weight: 600;
   right: 15px;
 }
 
-
 .Burger {
   display: none;
 }
@@ -112,7 +117,6 @@ ul {
 .LinkDiv li {
   display: inline;
   margin-right: 60px;
-
 }
 
 .LinkDiv li a {
@@ -124,6 +128,7 @@ ul {
   float: right;
   margin-top: 60px;
   margin-right: 300px;
+  font-family: none;
 }
 
 .Links ul li {
@@ -137,14 +142,12 @@ ul {
   text-decoration: none;
 }
 
-
-
 .LinkDiv {
   float: right;
-  margin-top: 10px;
-  font-family: MerchantBlack;
+  margin-top: 6px;
+  font-family: ui-monospace;
   grid-area: 1/2/2/3;
-  
+
   display: grid;
   justify-content: right;
 }
@@ -167,6 +170,7 @@ ul {
 .BookingButton {
   border: solid 2px gray;
   padding: 5px 20px 5px 20px;
+  font-family: none;
 }
 .BookingButton a {
   color: inherit;
@@ -176,11 +180,11 @@ ul {
   border: solid 2px rgb(209, 208, 208);
   padding: 5px 20px 5px 20px;
   background-color: #000;
-  color:white;
+  color: white;
 }
 
 .BookingButton:hover a {
-  color:white;
+  color: white;
 }
 
 .BookingButtonDark {
@@ -210,6 +214,8 @@ ul {
 
 .FooterLeft {
   display: inline-block;
+  margin-top: 10px;
+  font-family: none;
 }
 
 .FooterLeft h5 {
@@ -243,7 +249,7 @@ ul {
 
 .ServicesHome {
   text-align: center;
-  padding-top:45px;
+  padding-top: 45px;
 }
 
 .Services img {
@@ -823,10 +829,8 @@ ul {
   display: none;
 }
 
-
-
 .single-img h2 {
-  position:absolute;
+  position: absolute;
   bottom: 5%;
   z-index: 1;
   left: 8%;
@@ -843,36 +847,31 @@ ul {
   margin: 50px auto;
 }
 
-
-
-
-.img-slide-track{
+.img-slide-track {
   transition: all 1s cubic-bezier(0.7, 0, 0.3, 1);
 }
 
- .single-img{
-  height:700px;
+.single-img {
+  height: 700px;
   position: relative;
   z-index: 1;
 }
 
- .single-img img{
+.single-img img {
   width: 100%;
   height: 100%;
   transition: all 1s cubic-bezier(0.7, 0, 0.3, 1);
   transform: scale(1.2);
 }
 
- .single-img.slick-active img{
+.single-img.slick-active img {
   -webkit-animation: kenburns-top 5s ease-out both;
-	        animation: kenburns-top 5s ease-out both;
+  animation: kenburns-top 5s ease-out both;
 }
 
-
-
 .kenburns-top {
-	-webkit-animation: kenburns-top 5s ease-out both;
-	        animation: kenburns-top 5s ease-out both;
+  -webkit-animation: kenburns-top 5s ease-out both;
+  animation: kenburns-top 5s ease-out both;
 }
 
 /* ----------------------------------------------
@@ -887,40 +886,39 @@ ul {
  * animation kenburns-top
  * ----------------------------------------
  */
- @-webkit-keyframes kenburns-top {
+@-webkit-keyframes kenburns-top {
   0% {
     -webkit-transform: scale(1) translateY(0);
-            transform: scale(1) translateY(0);
+    transform: scale(1) translateY(0);
     -webkit-transform-origin: 50% 16%;
-            transform-origin: 50% 16%;
+    transform-origin: 50% 16%;
   }
   100% {
     -webkit-transform: scale(1.25) translateY(-15px);
-            transform: scale(1.25) translateY(-15px);
+    transform: scale(1.25) translateY(-15px);
     -webkit-transform-origin: top;
-            transform-origin: top;
+    transform-origin: top;
   }
 }
 @keyframes kenburns-top {
   0% {
     -webkit-transform: scale(1) translateY(0);
-            transform: scale(1) translateY(0);
+    transform: scale(1) translateY(0);
     -webkit-transform-origin: 50% 16%;
-            transform-origin: 50% 16%;
+    transform-origin: 50% 16%;
   }
   100% {
     -webkit-transform: scale(1.25) translateY(-15px);
-            transform: scale(1.25) translateY(-15px);
+    transform: scale(1.25) translateY(-15px);
     -webkit-transform-origin: top;
-            transform-origin: top;
+    transform-origin: top;
   }
 }
 
-.slick-current{ 
+.slick-current {
   -webkit-animation: kenburns-top 5s ease-out both;
-	        animation: kenburns-top 5s ease-out both;
+  animation: kenburns-top 5s ease-out both;
 }
-
 
 @media only screen and (max-width: 1220px) {
   .ContactImg {
@@ -980,10 +978,6 @@ ul {
     margin-bottom: 25px;
     text-decoration: none;
   }
-
-  
-  
-
 }
 
 @media only screen and (max-width: 600px) {
